<resources>
    <string name="app_name">rejestrowanie</string>
    <string name="witaj">"Witaj, "</string>
    <string name="nieprawid_owy_adres_e_mail">Nieprawidłowy adres e-mail</string>
    <string name="has_a_si_r_ni">Hasła się różnią</string>
    <string name="podaj_e_mail">Podaj e-mail</string>
    <string name="email">email</string>
    <string name="podaj_has_o">Podaj hasło</string>
    <string name="has_o">hasło</string>
    <string name="powt_tz_has_o">Powtótz hasło</string>
    <string name="has_o2">hasło</string>
    <string name="zatwierd">Zatwierdź</string>
    <string name="autor_000000000000">autor: 000000000000</string>
    <string name="rejestruj_konto">Rejestruj konto</string>
</resources>