<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rejestruj_konto"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:background="@color/teal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/podaj_e_mail"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/podaj_has_o"/>

    <EditText
        android:id="@+id/haslo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/has_o"
        android:inputType="textPassword"
        android:minHeight="48dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powt_tz_has_o"/>

    <EditText
        android:id="@+id/haslo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/has_o2"
        android:inputType="textPassword"
        android:minHeight="48dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/zatwierd"
        android:id="@+id/zatwierdz"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/wynik"
        android:text="@string/autor_000000000000"/>

</LinearLayout>